# django-migrations-diff

./: .flake8  .gitignore  LICENSE  LICENSE.md  Pipfile  README.md  README.rst  fabfile.py  main.py  setup.cfg  setup.py
django_migrations_diff/: __init__.py  __main__.py  help_text.py  main.py
libs/: args.py  console_utils.py  cprint.py
