[metadata]
license_file = LICENSE

[isort]
line_length=100
multi_line_output=3
skip_glob=snapshots
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma=True
combine_as_imports=True
use_parentheses=True

[flake8]
max-line-length = 100
exclude = .git, snapshots
ignore = D100,D104,D105,D106,W503,W504,W605
